gen/25.1rc3/rpk/rpk-iotune.adoc
= rpk iotune
:description: rpk iotune

Measure filesystem performance and create IO configuration file

== Usage

[,bash]
----
rpk iotune [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--directories |strings |List of directories to evaluate.

|--duration |duration |Duration of tests (e.g. 300ms, 1.5s, 2h45m) (default 10m0s).

|-h, --help |- |Help for iotune.

|--no-confirm |- |Disable confirmation prompt if the iotune file already exists.

|--out |string |The file path where the IO config will be written (default "/etc/redpanda/io-config.yaml").

|--timeout |duration |The maximum time after -- to wait for iotune to complete (e.g. 300ms, 1.5s, 2h45m) (default 1h0m0s).

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===